# bfl-mcp-servers

./: .gitignore  README.md
.github/workflows/: ci.yml  docker.yml  test.yml
accuweather-mcp/: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml
accuweather-mcp/.github/workflows/: ci.yml
accuweather-mcp/helm/: Chart.yaml  install.sh  uninstall.sh  values.yaml
accuweather-mcp/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
accuweather-mcp/scripts/: build_and_push.sh  integration_test.py  setup_dev.sh  start_dev_server.sh  test_server.py
accuweather-mcp/src/mcp_accuweather/: __init__.py  client.py  exceptions.py  models.py  server.py
accuweather-mcp/tests/: __init__.py  test_client.py  test_server.py
atlassian-mcp/: .gitignore  Dockerfile  README.md  test-linux-compatibility.sh
atlassian-mcp/helm/: CHART_SUMMARY.md  Chart.yaml  README.md  install.sh  uninstall.sh  uninstall.sh.backup  values.yaml
atlassian-mcp/helm/examples/: README.md  values-dev.yaml.example  values-prod.yaml.example
atlassian-mcp/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
atlassian-mcp/helm/templates/tests/: test-connection.yaml
google-search-mcp/: .env.example  CONFIGMAP_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  Dockerfile.enhanced  ENHANCED_README.md  MCP_INTEGRATION.md  Makefile  Makefile.enhanced  README.md  enhanced_google_search_server.py  mcp-config.json  pyproject.toml  setup-mcp-configmap.sh  smithery.yaml
google-search-mcp/helm/: .helmignore  Chart.yaml  README.md  install.sh  uninstall.sh  values-production.yaml  values.yaml
google-search-mcp/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
google-search-mcp/helm/templates/tests/: test-connection.yaml
nasdaq-data-link-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
nasdaq-data-link-mcp/helm/: CHART_SUMMARY.md  Chart.yaml  README.md  install.sh  uninstall.sh  values.yaml
nasdaq-data-link-mcp/helm/examples/: values-dev.yaml.example  values-prod.yaml.example
nasdaq-data-link-mcp/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
nasdaq-data-link-mcp/helm/templates/tests/: test-connection.yaml
nasdaq-data-link-mcp/nasdaq_data_link_mcp_os/: server.py
sharepoint-mcp/: .dockerignore  .env.example  COMPLETION_SUMMARY.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml
sharepoint-mcp/helm/: Chart.yaml  README.md  install.sh  uninstall.sh  values.yaml
sharepoint-mcp/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
sharepoint-mcp/src/mcp_sharepoint/: __init__.py  exceptions.py
sharepoint-mcp/src/mcp_sharepoint/models/: __init__.py  sharepoint.py
sharepoint-mcp/src/mcp_sharepoint/servers/: main_mcp.py
sharepoint-mcp/src/mcp_sharepoint/sharepoint/: __init__.py  client.py
sharepoint-mcp/src/mcp_sharepoint/utils/: __init__.py  lifecycle.py  logging.py
sharepoint-mcp/tests/: __init__.py  test_sharepoint_client.py
slack-server-mcp/: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  README.md  build-docker.sh  docker-compose.yml  pyproject.toml  requirements.txt  slack_mcp_server.py  test_sse.py
slack-server-mcp/examples_python/: README.md  get_users.py  get_users_http.py  get_users_sse.py
slack-server-mcp/helm/: CHART_SUMMARY.md  Chart.yaml  DEPLOYMENT.md  README.md  install.sh  install.sh.backup  test-chart.sh  test-full-cycle.sh  test-uninstall.sh  uninstall.sh  values.yaml
slack-server-mcp/helm/examples/: values-dev.yaml  values-dev.yaml.example  values-prod.yaml.example
slack-server-mcp/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
slack-server-mcp/helm/templates/tests/: test-connection.yaml
slack-server-mcp/slack_mcp_server/: __init__.py  schemas.py  server.py
teams-mcp/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml
teams-mcp/helm/: Chart.yaml  README.md  install.sh  uninstall.sh  values.yaml
teams-mcp/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
teams-mcp/src/mcp_teams/: __init__.py  exceptions.py
teams-mcp/src/mcp_teams/models/: __init__.py  teams.py
teams-mcp/src/mcp_teams/servers/: __init__.py  main_mcp.py
teams-mcp/src/mcp_teams/teams/: __init__.py  client.py
teams-mcp/src/mcp_teams/utils/: __init__.py  env.py  logging.py
teams-mcp/tests/: __init__.py  test_teams_client.py
web-browser-mcp/: .gitignore  Dockerfile  README.md  pyproject.toml
web-browser-mcp/helm/: Chart.yaml  README.md  install.sh  uninstall.sh  values.yaml
web-browser-mcp/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
web-browser-mcp/scripts/: build_and_push.sh  start_dev_server.sh  test_server.py
web-browser-mcp/src/mcp_web_browser/: __init__.py  server.py
web-browser-mcp/tests/: __init__.py  test_client.py  test_server.py
