[project]
name = "slack-server-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides Slack API functionality"
authors = [
    {name = "BlueFox Labs", email = "contact@bluefoxlabs.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "slack-sdk",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/bluefoxlabsai/bfl-mcp-servers"
Repository = "https://github.com/bluefoxlabsai/bfl-mcp-servers"

[project.scripts]
slack-mcp-server = "slack_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []